vlib/v/checker/tests/anon_missing_generic_err.out
vlib/v/checker/tests/anon_missing_generic_err.vv:8:2: notice: uninitialized `fn` struct fields are not allowed, since they can result in segfaults; use `?fn` or `@[required]` or initialize the field with `=` (if you absolutely want to have unsafe function pointers, use `= unsafe { nil }`)
    6 | 
    7 | struct Factory {
    8 |     build fn()!
      |     ~~~~~~~~~~~
    9 | }
   10 | fn  inject[T](mut serv T)!{
vlib/v/checker/tests/anon_missing_generic_err.vv:20:14: error: original `factory` is a function that returns !E. You must add the generic type to generic type list.
   18 | fn use_factory[F, E](factory fn(dep F) !E) Factory{
   19 |     return Factory{
   20 |         build: fn [factory][F]()!{
      |                    ~~~~~~~
   21 |                 mut dep := F{}
   22 |                 inject[F](mut dep)!
